--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-family: "Inter", sans-serif;
   font-family: 'Singolare';
+  max-width: 1800px;
+  margin: 0px auto;
 }
 
 h1,
@@ -318,4 +320,257 @@ h6 {
 
 .dropdown ul li a {
   color: rgba(253, 253, 253, .7);
+}
+
+
+.visibility-company-tab {
+  border: 2px solid #B6B6B6;
+  height: 120px;
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin: 0px auto;
+  transition: background .5s ease-in-out, border .5s ease-in-out;
+}
+
+.visibility-company-tab img {
+  height: 3rem;
+  width: auto;
+  transition: height .5s ease-in-out;
+}
+
+.visibility-company-tab.smaller img {
+  height: 2rem;
+}
+
+.visibility-company-tab.small img {
+  height: 2.3rem;
+}
+
+.visibility-company-tab.bigger img {
+  height: 3.5rem;
+}
+
+.visibility-company-slider .swiper-slide-active .visibility-company-tab {
+  background: #FD532F;
+  border: 1px solid #FD532F;
+  height: 180px;
+  width: 180px;
+}
+
+.swiper-wrapper {
+  align-items: center;
+}
+
+.bg-light-blue .swiper-wrapper {
+  align-items: unset;
+}
+
+.visibility-company-slider .swiper-slide-active .visibility-company-tab img {
+  height: 5rem;
+}
+
+.visibility-company-slider .swiper-slide-active .visibility-company-tab.bigger img {
+  height: 7rem;
+}
+
+/* .visibility-company-slider .swiper-slide-active .visibility-company-tab.bigger {
+  height: 20rem;
+  width: 20rem;
+} */
+
+.visibility-company-slider .swiper-slide-active .visibility-company-tab.smaller img {
+  height: 3.3rem;
+}
+
+.visibility-company-slider {
+  position: relative;
+}
+
+.visibility-company-slider .slider-controller {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+}
+
+.visibility-company-slider .slider-controller button {
+  border: 2px solid #B6B6B6;
+  height: 80px;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.visibility-company-slider .slider-controller.left {
+  left: 0px;
+  top: 0px;
+}
+
+.visibility-company-slider .slider-controller.right {
+  right: 0px;
+  top: 0px;
+}
+
+.company-box {
+  width: calc(100% - 300px);
+  margin: 0px auto;
+  display: block;
+}
+
+.custom-pagination {
+  display: flex;
+  justify-content: center;
+  grid-gap: 20px;
+}
+
+.custom-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #ddd;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.custom-dot.active {
+  background-color: #F65330;
+}
+
+.service-bar .swiper-wrapper {
+  align-items: unset;
+}
+
+
+.talent-6 {
+  background: url("/assets/images/about/ahead.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
+.talent-5 {
+  background: url("/assets/images/about/philosophy.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
+.talent-4 {
+  background: url("/assets/images/about/talent.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
+.talent-3 {
+  background: url("/assets/images/about/what.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
+.talent-2 {
+  background: url("/assets/images/about/journey.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
+.talent-1 {
+  background: url("/assets/images/about/story.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
+
+
+@media screen and (max-width:750px) {
+  .arrow-box-link {
+    width: 80px;
+    height: 80px;
+    right: -5px;
+  }
+
+  .arrow-box-link img {
+    width: 1.3rem;
+  }
+
+  .bottom-tag .container .container {
+    padding: 0px;
+  }
+
+  .bg-light-blue .swiper-wrapper {
+    align-items: unset;
+  }
+
+  .company-box {
+    width: calc(100% - 200px);
+  }
+
+  .visibility-company-slider .slider-controller {
+    height: 100px;
+    width: 100px;
+    height: 100%;
+  }
+
+  .visibility-company-tab {
+    margin: 0px auto;
+  }
+
+  .talent-hero {
+    background: #090909;
+    padding: 20% 2%;
+  }
+
+  .talent-hero .talent-text h3 {
+    line-height: 1;
+    font-size: 3.2rem;
+  }
+
+  .talent-hero .talent-text p {
+    width: 100%;
+  }
+
+  .talent-hero .video-grid {
+    margin-top: 10%;
+  }
+
+
+  .custom-dot {
+    height: 15px;
+    width: 15px;
+  }
+
+  .visibility-company-slider .slider-controller button {
+    width: 60px;
+    height: 60px;
+  }
+
+  .visibility-company-slider .slider-controller button img {
+    width: 20px;
+    height: auto;
+  }
+
+  .visibility-company-slider .swiper-slide-active .visibility-company-tab.smaller img {
+    height: 3rem;
+  }
+
+  .bottom-cover .arrow-box-link {
+    width: 80px;
+    height: 80px;
+    right: 80px;
+  }
 }
