--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -239,17 +239,26 @@ h6 {
   background-repeat: no-repeat;
   background-position: center top;
   height: 100vh;
+  overflow: hidden;
+  width: 100vw;
+  position: relative;
 }
 
 .home-hero video {
-  height: 56.25vw;
+  /* height: 56.25vw;
   left: 50%;
   position: absolute;
   top: 50%;
   -webkit-transform: translate3d(-50%, -50%, 10px);
   transform: translate3d(-50%, -50%, 10px);
   width: 100vw;
-  z-index: 1;
+  z-index: 1; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+  width: auto;
 }
 
 .ant-drawer-content-wrapper {
